Added Authorize and Fixed Layout PageHeader

--- a/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-@section NavBarClass {
-    <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
-}
+
 @section Carousel {
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -11,9 +9,9 @@
                     <img class="img-fluid" src="~/img/BikeCarousel2.jpg " alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 700px;">
-                            <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                            @*<h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>*@
                             <h3 class="display-4 text-white font-weight-semi-bold mb-4">Parts for All Brands</h3>
-                            <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                            <a asp-action="Index" asp-controller="Products" class="btn btn-light py-2 px-3">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -21,9 +19,9 @@
                     <img class="img-fluid" src="~/img/BikeCarousel1.jpg " alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 700px;">
-                            <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                            @*<h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>*@
                             <h3 class="display-4 text-white font-weight-semi-bold mb-4">Get Back Riding Today!</h3>
-                            <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                            <a asp-action="Index" asp-controller="Products" class="btn btn-light py-2 px-3">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +129,7 @@
     </div>
 </div>
 <!-- Categories End -->
-<!-- Offer Start -->
+@*<!-- Offer Start -->
 <div class="container-fluid offer pt-5">
     <div class="row px-xl-5">
         <div class="col-md-6 pb-4">
@@ -156,17 +154,17 @@
         </div>
     </div>
 </div>
-<!-- Offer End -->
+<!-- Offer End -->*@
 <!-- Products Start -->
 <div class="container-fluid pt-5">
     <div class="text-center mb-4">
-        <h2 class="section-title px-5"><span class="px-2">Trandy Products</span></h2>
+        <h2 class="section-title px-5"><span class="px-2">New Products</span></h2>
     </div>
     <div class="row px-xl-5 pb-3">
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/product-1.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeBrake.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                     <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -183,7 +181,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/product-2.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeShock.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                     <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -200,7 +198,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/product-3.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeTire.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                     <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -217,7 +215,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/product-4.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikePedal.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                     <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -231,7 +229,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
+ @*       <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
                     <img class="img-fluid w-100" src="~/img/product-5.jpg" alt="">
@@ -298,11 +296,11 @@
                     <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 <!-- Products End -->
-<!-- Subscribe Start -->
+@*<!-- Subscribe Start -->
 <div class="container-fluid bg-secondary my-5">
     <div class="row justify-content-md-center py-5 px-xl-5">
         <div class="col-md-6 col-12 py-5">
@@ -500,4 +498,4 @@
         </div>
     </div>
 </div>
-<!-- Vendor End -->
+<!-- Vendor End -->*@
