--- a/StoreFront.UI.MVC/Views/Products/Create.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Create.cshtml
@@ -1,14 +1,9 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Produt";
     ViewData["Title2"] = "";
 }
-@section NavBarClass {
-    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-    }
-
-
 
         <div class="row mb-3">
             <div class="col-md-8 offset-4">
