--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
         </div>
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="" class="text-decoration-none">
+                <a href="@Url.Action("Index", "Products")" class="text-decoration-none">
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">MTB</span>Parts</h1>
                 </a>
             </div>
@@ -101,7 +101,22 @@
                     <h6 class="m-0">Categories</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
-              @RenderSection("NavBarClass", false)                
+
+                @{
+                    string navBarStr;
+                    if (ViewData["Title"] == "Home")
+                    {
+                        navBarStr = "<nav class=\"collapse show navbar navbar-vertical navbar - light align - items - start p - 0 border border-top - 0 border - bottom - 0\" id=\"navbar - vertical\">";
+                    }
+                    else
+                    {
+                        navBarStr = "<nav class=\"collapse position-absolute navbar navbar-vertical navbar - light align - items - start p - 0 border border-top - 0 border - bottom - 0 bg - light\" id=\"navbar - vertical\" style=\"width: calc(100 % -30px); z - index: 1; \">";
+                    }
+                }
+
+                <span>@Html.Raw(navBarStr)</span>
+
+                @*@RenderSection("NavBarClass", false)*@
 
                 <div class="navbar-nav w-100 overflow-hidden " style="height: 410px">
                     @*<div class="nav-item dropdown">
@@ -139,7 +154,7 @@
                             <a href="@Url.Action("Index", "Home")" class="nav-item nav-link active">Home</a>
                             <a href="@Url.Action("Index", "Products")" class="nav-item nav-link">Shop</a>
                             @if (User.IsInRole("Admin"))
-                            {                                
+                            {
                                 <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Admin</a>
                                     <div class="dropdown-menu rounded-0 m-0">
@@ -151,17 +166,19 @@
                                     </div>
                                 </div>
                             }
+                            <span></span>
 
-                            @*<a asp-action="Details" asp-controller="Products" asp-route-id="2"  class="nav-item nav-link">Shop Detail</a>*@
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                @if (signInManager.IsSignedIn(User)){
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="@Url.Action("Cart", "Home")" class="dropdown-item">Shopping Cart</a>
-                                    <a href="@Url.Action("CheckOut", "Home")" class="dropdown-item">Checkout</a>
+                            @if (signInManager.IsSignedIn(User))
+                            {
+                                <div class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                    <div class="dropdown-menu rounded-0 m-0">
+                                        <a href="@Url.Action("Cart", "Home")" class="dropdown-item">Shopping Cart</a>
+                                        <a href="@Url.Action("CheckOut", "Home")" class="dropdown-item">Checkout</a>
+                                    </div>
                                 </div>
-                                }
-                            </div>
+                            }
+
                             <a href="@Url.Action("Contact", "Home")" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
@@ -208,7 +225,6 @@
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-dark mb-2" href="@Url.Action("Index", "Home")"><i class="fa fa-angle-right mr-2"></i>Home</a>
                             <a class="text-dark mb-2" href="@Url.Action("Shop", "Home")"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="@Url.Action("Detail", "Home")"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
                             <a class="text-dark mb-2" href="@Url.Action("Cart", "Home")"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
                             <a class="text-dark mb-2" href="@Url.Action("Checkout", "Home")"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
                             <a class="text-dark" href="@Url.Action("Contact", "Home")"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
@@ -236,10 +252,9 @@
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed
+                    &copy; @DateTime.Now.Year <a class="text-dark font-weight-semi-bold" href="#">MTBParts</a>. All Rights Reserved. Designed
                     by
-                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a><br>
-                    Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">SeanCodes2</a><br>
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
