--- a/StoreFront.UI.MVC/Views/Products/Delete.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Delete.cshtml
@@ -1,12 +1,8 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Product";
 }
-@section NavBarClass {
-    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-    }
-
 
 
         <div class="row mb-3">
