--- a/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -1,13 +1,9 @@
 ﻿@model IEnumerable<StoreFront.DATA.EF.Models.Product>
 
 @{
-    ViewData["Title"] = "Shop";
+    ViewData["Title"] = "Shop For Parts";
     ViewData["Title2"] = "Mountain Bike Parts";
 }
-
-@section NavBarClass {
-    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-    }
 
 
         <!-- Shop Start -->
