--- a/StoreFront.UI.MVC/Views/Home/Contact.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Contact.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model StoreFront.UI.MVC.Models.ContactViewModel
+
 @{
     ViewData["Title"] = "Contact";
-    ViewData["Title2"] = "Contact Me";
 }
+
 
 
 <!-- Contact Start -->
@@ -13,36 +14,34 @@
     <div class="row px-xl-5">
         <div class="col-lg-7 mb-5">
             <div class="contact-form">
-                <div id="success"></div>
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                    <div class="control-group">
-                        <input type="text" class="form-control" id="name" placeholder="Your Name"
-                               required="required" data-validation-required-message="Please enter your name" />
-                        <p class="help-block text-danger"></p>
+
+                <form asp-action="Contact">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-                    <div class="control-group">
-                        <input type="email" class="form-control" id="email" placeholder="Your Email"
-                               required="required" data-validation-required-message="Please enter your email" />
-                        <p class="help-block text-danger"></p>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    <div class="control-group">
-                        <input type="text" class="form-control" id="subject" placeholder="Subject"
-                               required="required" data-validation-required-message="Please enter a subject" />
-                        <p class="help-block text-danger"></p>
+                    <div class="form-group">
+                        <label asp-for="Subject" class="control-label"></label>
+                        <input asp-for="Subject" class="form-control" />
+                        <span asp-validation-for="Subject" class="text-danger"></span>
                     </div>
-                    <div class="control-group">
-                        <textarea class="form-control" rows="6" id="message" placeholder="Message"
-                                  required="required"
-                                  data-validation-required-message="Please enter your message"></textarea>
-                        <p class="help-block text-danger"></p>
+                    <div class="form-group">
+                        <label asp-for="Message" class="control-label"></label>
+                        <textarea asp-for="Message" class="form-control"></textarea>
+                        <span asp-validation-for="Message" class="text-danger"></span>
                     </div>
-                    <div>
-                        <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">
-                            Send
-                            Message
-                        </button>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />                        
                     </div>
                 </form>
+                
             </div>
         </div>
         <div class="col-lg-5 mb-5">
@@ -64,3 +63,79 @@
     </div>
 </div>
 <!-- Contact End -->
+
+@*<form name="sentMessage" id="contactForm" novalidate="novalidate">
+    <div class="control-group">
+        <input type="text" class="form-control" id="name" placeholder="Your Name"
+               required="required" data-validation-required-message="Please enter your name" />
+        <p class="help-block text-danger"></p>
+    </div>
+    <div class="control-group">
+        <input type="email" class="form-control" id="email" placeholder="Your Email"
+               required="required" data-validation-required-message="Please enter your email" />
+        <p class="help-block text-danger"></p>
+    </div>
+    <div class="control-group">
+        <input type="text" class="form-control" id="subject" placeholder="Subject"
+               required="required" data-validation-required-message="Please enter a subject" />
+        <p class="help-block text-danger"></p>
+    </div>
+    <div class="control-group">
+        <textarea class="form-control" rows="6" id="message" placeholder="Message"
+                  required="required"
+                  data-validation-required-message="Please enter your message"></textarea>
+        <p class="help-block text-danger"></p>
+    </div>
+    <div>
+        <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">
+            Send
+            Message
+        </button>
+    </div>
+</form>*@
+
+
+@*<h1>Contact</h1>
+
+<h4>ContactViewModel</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Contact">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message" class="control-label"></label>
+                <textarea asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>*@
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
