--- a/StoreFront.UI.MVC/Views/Products/Delete.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Delete.cshtml
@@ -1,79 +1,84 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Delete Product";
+    ViewData["Title"] = "Delete";
 }
 
+<div class="row mb-3">
+    <div class="col-md-8 offset-4">
+        <h1>Delete @Model.ProductName</h1>
+        <h2 class="text-danger">This Action Is <strong>Permanent!</strong></h2>
+        <br />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ProductName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ProductName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ProductDescription)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ProductDescription)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ProductPrice)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ProductPrice)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.UnitsInStock)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.UnitsInStock)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.UnitsOnOrder)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.UnitsOnOrder)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Discontinued)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Discontinued)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ProductImage)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ProductImage)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Category)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Category.CategoryName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Manufacturer)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Manufacturer.ManufacturerName)
+            </dd>
+        </dl>
 
-        <div class="row mb-3">
-            <div class="col-md-8 offset-4">
-                <h1>Delete @Model.ProductName</h1>
-                <h2 class="text-danger">This Action Is <strong>Permanent!</strong></h2>
-                <br />
-                <dl class="row">
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ProductName)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ProductName)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ProductDescription)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ProductDescription)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ProductPrice)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ProductPrice)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.UnitsInStock)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.UnitsInStock)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.UnitsOnOrder)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.UnitsOnOrder)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Discontinued)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Discontinued)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Category)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Category.CategoryName)
-                    </dd>
-                    <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Manufacturer)
-                    </dt>
-                    <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Manufacturer.ManufacturerName)
-                    </dd>
-                </dl>
-                <h2 class="text-danger">This Action Is <strong>Permanent!</strong></h2>
-                <form asp-action="Delete">
-                    <input type="hidden" asp-for="ProductId" />
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ProductId" />
             @if (Model.ProductOrders.Count() == 0)
             {
-                    <input type="submit" value="Delete" class="btn btn-danger" />
+                <input type="submit" value="Delete" class="btn btn-danger" />
             }
             else
             {
-                    <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't Delete - referenced by other records">Delete</a>
+                <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't Delete - referenced by other records">Delete</a>
             }
 
-                
-                <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
-            </form>
-        </div>
+
+            <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+        </form>
     </div>
+</div>
