--- a/StoreFront.UI.MVC/Views/Products/Edit.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Edit.cshtml
@@ -1,74 +1,79 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Modify Product";
+    ViewData["Title"] = "Edit";
 }
 
-
-        <div class="row mb-3">
-            <div class="col-md-8 offset-4">
-                <h1>Modify <strong>@Model.ProductName</strong></h1>
-                <br />
-                <div class="row">
-                    <div class="col-md-6">
-                        <form asp-action="Edit">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <input type="hidden" asp-for="ProductId" />
-                            <div class="form-group">
-                                <label asp-for="CategoryId" class="control-label"></label>
-                                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
-                                <span asp-validation-for="CategoryId" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ManufacturerId" class="control-label"></label>
-                                <select asp-for="ManufacturerId" class="form-control" asp-items="ViewBag.ManufacturerId"></select>
-                                <span asp-validation-for="ManufacturerId" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ProductName" class="control-label"></label>
-                                <input asp-for="ProductName" class="form-control" />
-                                <span asp-validation-for="ProductName" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ProductDescription" class="control-label"></label>
-                                <input asp-for="ProductDescription" class="form-control" />
-                                <span asp-validation-for="ProductDescription" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ProductPrice" class="control-label"></label>
-                                <input asp-for="ProductPrice" class="form-control" />
-                                <span asp-validation-for="ProductPrice" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="UnitsInStock" class="control-label"></label>
-                                <input asp-for="UnitsInStock" class="form-control" />
-                                <span asp-validation-for="UnitsInStock" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="UnitsOnOrder" class="control-label"></label>
-                                <input asp-for="UnitsOnOrder" class="form-control" />
-                                <span asp-validation-for="UnitsOnOrder" class="text-danger"></span>
-                            </div>
-                            <div class="form-group form-check">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
-                                </label>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Save" class="btn btn-primary" />
-                            </div>
-                        </form>
+<div class="row mb-3">
+    <div class="col-md-8 offset-4">
+        <h1>Modify <strong>@Model.ProductName</strong></h1>
+        <br />
+        <div class="row">
+            <div class="col-md-6">
+                <form asp-action="Edit" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="ProductImage" />
+                    <input type="hidden" asp-for="ProductId" />
+                    <div class="form-group">
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                        <span asp-validation-for="CategoryId" class="text-danger"></span>
                     </div>
-                </div>
-
-                <div>
-                    <a asp-action="Index" class="btn btn-info">Back to Products</a>
-                </div>
+                    <div class="form-group">
+                        <label asp-for="ManufacturerId" class="control-label"></label>
+                        <select asp-for="ManufacturerId" class="form-control" asp-items="ViewBag.ManufacturerId"></select>
+                        <span asp-validation-for="ManufacturerId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProductName" class="control-label"></label>
+                        <input asp-for="ProductName" class="form-control" />
+                        <span asp-validation-for="ProductName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProductDescription" class="control-label"></label>
+                        <input asp-for="ProductDescription" class="form-control" />
+                        <span asp-validation-for="ProductDescription" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProductPrice" class="control-label"></label>
+                        <input asp-for="ProductPrice" class="form-control" />
+                        <span asp-validation-for="ProductPrice" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UnitsInStock" class="control-label"></label>
+                        <input asp-for="UnitsInStock" class="form-control" />
+                        <span asp-validation-for="UnitsInStock" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UnitsOnOrder" class="control-label"></label>
+                        <input asp-for="UnitsOnOrder" class="form-control" />
+                        <span asp-validation-for="UnitsOnOrder" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProductImage" class="control-label"></label>
+                        @*<input asp-for="ProductImage" class="form-control" />*@
+                        <input type="file" asp-for="Image" class="form-control"/>
+                        <span asp-validation-for="ProductImage" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <a asp-action="Index" class="btn btn-info ml-3">Back to Products</a>
+                    </div>
+                </form>
             </div>
         </div>
 
+        <div>
+        </div>
+    </div>
+</div>
 
-    @section Scripts {
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
