--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
         </div>
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="@Url.Action("Index", "Products")" class="text-decoration-none">
+                <a href="@Url.Action("Index", "Home")" class="text-decoration-none">
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">MTB</span>Parts</h1>
                 </a>
             </div>
@@ -106,28 +106,16 @@
                     string navBarStr;
                     if (ViewData["Title"] == "Home")
                     {
-                        navBarStr = "<nav class=\"collapse show navbar navbar-vertical navbar - light align - items - start p - 0 border border-top - 0 border - bottom - 0\" id=\"navbar - vertical\">";
+                        navBarStr = "<nav class=\"collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0\" id=\"navbar-vertical\">";
                     }
                     else
                     {
-                        navBarStr = "<nav class=\"collapse position-absolute navbar navbar-vertical navbar - light align - items - start p - 0 border border-top - 0 border - bottom - 0 bg - light\" id=\"navbar - vertical\" style=\"width: calc(100 % -30px); z - index: 1; \">";
+                        navBarStr = "<nav class=\"collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light\" id=\"navbar-vertical\" style=\"width: calc(100% - 30px); z-index: 1;\">";
                     }
                 }
-
-                <span>@Html.Raw(navBarStr)</span>
-
-                @*@RenderSection("NavBarClass", false)*@
+                @Html.Raw(navBarStr)
 
                 <div class="navbar-nav w-100 overflow-hidden " style="height: 410px">
-                    @*<div class="nav-item dropdown">
-                    <a href="#" class="nav-link" data-toggle="dropdown">Admin<i class="fa fa-angle-down float-right mt-1"></i></a>
-                    <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                    <a href="" class="dropdown-item">Users</a>
-                    <a href="" class="dropdown-item">Roles</a>
-                    <a href="" class="dropdown-item">Suppliers</a>
-                    <a href="" class="dropdown-item">Categories</a>
-                    </div>
-                    </div>*@
                     <a href="" class="nav-item nav-link">Handlebars</a>
                     <a href="" class="nav-item nav-link">Wheels</a>
                     <a href="" class="nav-item nav-link">Tires</a>
@@ -266,7 +254,6 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
@@ -283,5 +270,4 @@
     @RenderSection("Scripts", false)
 
 </body>
-
 </html>
