--- a/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -164,10 +164,10 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/BikeBrake.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikePedal-Square.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                    <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                    <h6 class="text-truncate mb-3">Clip and Clipless Pedals</h6>
                     <div class="d-flex justify-content-center">
                         <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
                     </div>
@@ -181,10 +181,10 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/BikeShock.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeShock-square.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                    <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                    <h6 class="text-truncate mb-3">Drivetrain Components</h6>
                     <div class="d-flex justify-content-center">
                         <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
                     </div>
@@ -198,10 +198,10 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/BikeTire.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeTire-square.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                    <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                    <h6 class="text-truncate mb-3">Wheels/Tires</h6>
                     <div class="d-flex justify-content-center">
                         <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
                     </div>
@@ -215,10 +215,10 @@
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
             <div class="card product-item border-0 mb-4">
                 <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                    <img class="img-fluid w-100" src="~/img/BikePedal.jpg" alt="">
+                    <img class="img-fluid w-100" src="~/img/BikeBrake-square.jpg" alt="">
                 </div>
                 <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                    <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                    <h6 class="text-truncate mb-3">Brakes</h6>
                     <div class="d-flex justify-content-center">
                         <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
                     </div>
