--- a/StoreFront.UI.MVC/Views/Products/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Details.cshtml
@@ -55,7 +55,8 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
+                    @*<button asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@Model.ProductId" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>*@
+                    <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@Model.ProductId" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
                 </div>
                 <div>
                     <a asp-action="Index" class="btn btn-primary btn-plus mx-3">Return to Products</a>
