--- a/StoreFront.UI.MVC/Views/Products/TableView.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/TableView.cshtml
@@ -200,7 +200,7 @@
                         {
                             <tr>
                                 <td>
-                                    <a asp-action="Details" asp-route-id="@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>
+                                <a asp-action="Details" asp-route-id="@item.ProductId" class="font-weight-bolder">@Html.DisplayFor(modelItem => item.ProductName)</a>
 
                                 </td>
 
