--- a/StoreFront.UI.MVC/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/StoreFront.UI.MVC/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<h1 class="offset-1">@ViewData["Title"]</h1>
+<h2 class="offset-1">Enter your email.</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-1">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
