--- a/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,9 +6,9 @@
 }
 
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="offset-1">@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5 offset-1">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
