--- a/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,27 +4,57 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="offset-1">@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-1">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.ShipToFirstName"></label>
+                <input asp-for="Input.ShipToFirstName" class="form-control" autocomplete="ShipToFirstName" aria-required="true" />
+                <span asp-validation-for="Input.ShipToFirstName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="Input.ShipToLastName"></label>
+                <input asp-for="Input.ShipToLastName" class="form-control" autocomplete="ShipToLastName" aria-required="true" />
+                <span asp-validation-for="Input.ShipToLastName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="Input.ShipToAddress"></label>
+                <input asp-for="Input.ShipToAddress" class="form-control" autocomplete="ShipToAddress" aria-required="true" />
+                <span asp-validation-for="Input.ShipToAddress" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="Input.ShipToCity"></label>
+                <input asp-for="Input.ShipToCity" class="form-control" autocomplete="ShipToCity" aria-required="true" />
+                <span asp-validation-for="Input.ShipToCity" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="Input.ShipToState"></label>
+                <input asp-for="Input.ShipToState" class="form-control" autocomplete="ShipToState" aria-required="true" />
+                <span asp-validation-for="Input.ShipToState" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="Input.ShipToZip"></label>
+                <input asp-for="Input.ShipToZip" class="form-control" autocomplete="ShipToZip" aria-required="true" />
+                <span asp-validation-for="Input.ShipToZip" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
                 <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
