--- a/StoreFront.UI.MVC/Views/Customers/Create.cshtml
+++ b/StoreFront.UI.MVC/Views/Customers/Create.cshtml
@@ -3,57 +3,61 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="row">
+    <div class="col-8 offset-2">
+        <h1>Add Customer</h1>
 
         <div class="row">
-            <div class="col-8 offset-2">
-                <h1>Add New Customer</h1>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <form asp-action="Create">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <input type="hidden" asp-for="CustomerId" />
-                           @* <div class="form-group">
-                                <label asp-for="CustomerId" class="control-label"></label>
-                                <input asp-for="CustomerId" class="form-control" />
-                                <span asp-validation-for="CustomerId" class="text-danger"></span>
-                            </div>*@
-                            <div class="form-group">
-                                <label asp-for="ShipToName" class="control-label"></label>
-                                <input asp-for="ShipToName" class="form-control" />
-                                <span asp-validation-for="ShipToName" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ShipToCity" class="control-label"></label>
-                                <input asp-for="ShipToCity" class="form-control" />
-                                <span asp-validation-for="ShipToCity" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ShipToState" class="control-label"></label>
-                                <input asp-for="ShipToState" class="form-control" />
-                                <span asp-validation-for="ShipToState" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ShipToZip" class="control-label"></label>
-                                <input asp-for="ShipToZip" class="form-control" />
-                                <span asp-validation-for="ShipToZip" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="UserId" class="control-label"></label>
-                                <input asp-for="UserId" class="form-control" />
-                                <span asp-validation-for="UserId" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-warning" />
-                                <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
-                            </div>
-                        </form>
+            <div class="col-md-4">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="ShipToFirstName" class="control-label"></label>
+                        <input asp-for="ShipToFirstName" class="form-control" />
+                        <span asp-validation-for="ShipToFirstName" class="text-danger"></span>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label asp-for="ShipToLastName" class="control-label"></label>
+                        <input asp-for="ShipToLastName" class="form-control" />
+                        <span asp-validation-for="ShipToLastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ShipToCity" class="control-label"></label>
+                        <input asp-for="ShipToCity" class="form-control" />
+                        <span asp-validation-for="ShipToCity" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ShipToState" class="control-label"></label>
+                        <input asp-for="ShipToState" class="form-control" />
+                        <span asp-validation-for="ShipToState" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ShipToZip" class="control-label"></label>
+                        <input asp-for="ShipToZip" class="form-control" />
+                        <span asp-validation-for="ShipToZip" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserId" class="control-label"></label>
+                        <input asp-for="UserId" class="form-control" />
+                        <span asp-validation-for="UserId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ShipToAddress" class="control-label"></label>
+                        <input asp-for="ShipToAddress" class="form-control" />
+                        <span asp-validation-for="ShipToAddress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+                    </div>
+                </form>
             </div>
         </div>
 
-    @section Scripts {
+    </div>
+</div>
+
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
