--- a/StoreFront.UI.MVC/Views/Customers/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Customers/Details.cshtml
@@ -6,17 +6,21 @@
 
 <div class="row">
     <div class="col-8 offset-2">
-        <h1>Details</h1>
+        <h1>@Model.ShipToFirstName @Model.ShipToLastName Details</h1>
 
         <div>
-            <h4>Customer</h4>
-            <hr />
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ShipToName)
+                    @Html.DisplayNameFor(model => model.ShipToFirstName)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ShipToName)
+                    @Html.DisplayFor(model => model.ShipToFirstName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ShipToLastName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ShipToLastName)
                 </dd>
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.ShipToCity)
@@ -42,11 +46,17 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.UserId)
                 </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ShipToAddress)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ShipToAddress)
+                </dd>
             </dl>
         </div>
         <div>
-            <a asp-action="Edit" asp-route-id="@Model?.CustomerId">Edit</a> |
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Edit" asp-route-id="@Model?.CustomerId" class="btn btn-warning">Edit</a> 
+            <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
         </div>
     </div>
 </div>
