--- a/StoreFront.UI.MVC/Views/Customers/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Customers/Index.cshtml
@@ -3,62 +3,73 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="row">
+    <div class="col-8 offset-2">
 
-        <div class="row">
-            <div class="col-8 offset-2">
-                <h1>Customers</h1>
-                <p>
-                    <a asp-action="Create" class="btn btn-warning">Add New Customer</a>
-                </p>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                            @Html.DisplayNameFor(model => model.ShipToName)
-                            </th>
-                            <th>
-                            @Html.DisplayNameFor(model => model.ShipToCity)
-                            </th>
-                            <th>
-                            @Html.DisplayNameFor(model => model.ShipToState)
-                            </th>
-                            <th>
-                            @Html.DisplayNameFor(model => model.ShipToZip)
-                            </th>
-                            <th>
-                            @Html.DisplayNameFor(model => model.UserId)
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
+        <h1>Customers</h1>
+
+        <a asp-action="Create" class="btn btn-warning">Create New</a>
+        </p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToFirstName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToLastName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToCity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToState)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToZip)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UserId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipToAddress)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
                 @foreach (var item in Model)
                 {
-                        <tr>
-                            <td>
-                                <a asp-action="Details" asp-route-id="@item.CustomerId">@Html.DisplayFor(modelItem => item.ShipToName)</a>
-                            
-                            </td>
-                            <td>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShipToFirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShipToLastName)
+                        </td>
+                        <td>
                             @Html.DisplayFor(modelItem => item.ShipToCity)
-                            </td>
-                            <td>
+                        </td>
+                        <td>
                             @Html.DisplayFor(modelItem => item.ShipToState)
-                            </td>
-                            <td>
+                        </td>
+                        <td>
                             @Html.DisplayFor(modelItem => item.ShipToZip)
-                            </td>
-                            <td>
+                        </td>
+                        <td>
                             @Html.DisplayFor(modelItem => item.UserId)
-                            </td>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@item.CustomerId" >Edit</a> |
-                                
-                                <a asp-action="Delete" asp-route-id="@item.CustomerId" >Delete</a>
-                            </td>
-                        </tr>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShipToAddress)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
+                            <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+                        </td>
+                    </tr>
                 }
-                </tbody>
-            </table>
-        </div>
+            </tbody>
+        </table>
     </div>
+</div>
