--- a/StoreFront.UI.MVC/Views/Orders/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Orders/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.ShipToName)
+            @Html.DisplayFor(model => model.Customer.ShipToFirstName)
         </dd>
     </dl>
 </div>
