--- a/StoreFront.UI.MVC/Views/Orders/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Orders/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.OrderAmoutTotal)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Customer.ShipToName)
+                @Html.DisplayFor(modelItem => item.Customer.ShipToFirstName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
