--- a/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -162,9 +162,10 @@
                                 <img class="img-fluid w-100" src="~/img/@item.ProductImage" alt=""></a>
                             </div>
                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                                <h6 class="text-truncate mb-3">@item.ProductName</h6>
+                                <h6 class="text-info mb-3">@item.Manufacturer.ManufacturerName</h6>
+                                <h6 class="text-truncate font-weight-bolder mb-3">@item.ProductName</h6>
                                 <div class="d-flex justify-content-center">
-                                    <h6>@Html.DisplayFor(modelItem => item.ProductPrice)</h6>
+                                    <h6 class="text-success">@Html.DisplayFor(modelItem => item.ProductPrice)</h6>
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-between bg-light border">
@@ -172,7 +173,7 @@
                                     <i class="fas fa-eye text-primary mr-1"></i>View Detail
                                 </a>
 
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                             </div>
                         </div>
                     </div>
